Fixed header slide transition
Used CSS transform properties (scale) instead of placing
sidebarMenuContainer off screen to fix Firefox compatibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -158,11 +158,12 @@ li {
 /* --- Header content --- */
 
 /* --- Header tag --- */
-.hideOverFlow {
+// Not in use
+.hideOverflow {
   overflow: hidden;
 }
 
-.showOverFlow {
+.showOverflow {
   overflow: visible;
 }
 
@@ -183,6 +184,7 @@ li {
 /* --- menuButton styles --- */
 // menuButton expands and collapse the sidebar menu upon toggled
 .menuButton {
+  position: absolute;
   display: inline-block;
   float: right;
   width: 4.6875%;
@@ -194,7 +196,6 @@ li {
 
 // Position of menuButton after expanded, docked to the left
 .dockLeft {
-  position: relative;
   background: transparent url("../img/main_icons/cross.svg") no-repeat center;
   right: (3*45 + 2*16 + 1)/960 * 100%;
   @include transition(right, 0.3s, ease-out);
@@ -202,7 +203,6 @@ li {
 
 // Initial position of menuButton, docked to the right
 .dockRight {
-  position: relative;
   right: 0;
   @include transition(right, 0.3s, ease-out);
 }
@@ -210,6 +210,7 @@ li {
 /* --- sidebarMenuContainer styles --- */
 // sideBarMenuContainer contains the actual sidebar menu items
 .sidebarMenuContainer {
+  position: relative;
   display: inline-block;
   width: 17.39583%;
   float: right;
@@ -220,16 +221,30 @@ li {
 
 // Position of sidebarMenuContainer after expanding
 .sidebarExpanded {
-  position: absolute;
-  right: 0;
-  @include transition(right, 0.3s, ease-out);
+  -webkit-transform: scaleX(1);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform: scaleX(1);
+  -moz-transform-origin: 100% 100%;
+  -ms-transform: scaleX(1);
+  -ms-transform-origin: 100% 100%;
+  transform: scaleX(1);
+  transform-origin: 100% 100%;
+
+  @include transition(all, 0.3s, ease-out);
 }
 
 // Initial position of sidebarMenuContainer
 .sidebarInitial {
-  position: absolute;
-  right: -17.39583%;
-  @include transition(right, 0.3s, ease-out);
+  -webkit-transform: scaleX(0);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform: scaleX(0);
+  -moz-transform-origin: 100% 100%;
+  -ms-transform: scaleX(0);
+  -ms-transform-origin: 100% 100%;
+  transform: scaleX(0);
+  transform-origin: 100% 100%;
+
+  @include transition(all, 0.3s, ease-out);
 }
 
 /* --- Menu tabs styles --- */
